<?xml version="1.0"?>
<package format="2">
  <name>imu_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 package for IMU data parsing and handling.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <member_of>ros2</member_of>
</package>